Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-10829

Memory leak while inserting kudu with rand()

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • Impala 4.0.0, Impala 4.1.0, Impala 4.2.0, Impala 4.1.1, Impala 4.1.2
    • Impala 4.3.0
    • None
    • None

    Description

      This happens when inserting into a partitioned kudu table:

      [localhost:21050] default> create table my_kudu_tbl (id int, primary key(id)) partition by hash partitions 3 stored as kudu;
      
      [localhost:21050] default> insert into my_kudu_tbl select cast(rand() as int) from functional.alltypestiny;
      Query: insert into my_kudu_tbl select cast(rand() as int) from functional.alltypestiny
      Query submitted at: 2021-07-28 13:15:57 (Coordinator: http://quanlong-OptiPlex-BJ:25000)
      Query progress can be monitored at: http://quanlong-OptiPlex-BJ:25000/query_plan?query_id=da46d70b048eff6d:5b8369eb00000000
      WARNINGS: UDF WARNING: Memory leaked via FunctionContext::Allocate()
      UDF WARNING: Memory leaked via FunctionContext::Allocate()
      UDF WARNING: Memory leaked via FunctionContext::Allocate()
      UDF WARNING: Memory leaked via FunctionContext::Allocate()
      UDF WARNING: Memory leaked via FunctionContext::Allocate()
      UDF WARNING: Memory leaked via FunctionContext::Allocate()
      Key already present in Kudu table 'impala::default.my_kudu_tbl'. (1 of 7 similar)
      
      Modified 1 row(s), 7 row error(s) in 4.67s
      

      Attachments

        Issue Links

          Activity

            People

              csringhofer Csaba Ringhofer
              stigahuang Quanlong Huang
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: