IMPALA-10829: Fix leak in KuduPartitionExpr::CloseEvaluator()

KuduPartitionExpr::CloseEvaluator() didn't call the base class's
CloseEvaluator() which led to not closing its child expressions
recursively.

Testing:
- added a regression test

Change-Id: Ifcf35721e16ba780d01c19e916d58fb2e77a0836
Reviewed-on: http://gerrit.cloudera.org:8080/20330
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>